# kmfc

./: .gitignore  ContainerRootTest.c  README.md  ROADMAP.md  draft  pom.xml
hardcoded/: CMakeLists.txt  KMFContainer.c  KMFContainer.h  hashmap.h  jsonparse.c  jsontree.h  main.c
org.kevoree.modeling.c.generator/: README.md  REAMDE.md  TODO  dependency-reduced-pom.xml  pom.xml  wrapper
org.kevoree.modeling.c.generator/src/main/resources/hardcoded/: 5nodes1component.json  ContainerRootTest.c  ContainerRootTest.h  GroupTest.c  GroupTest.h  KMFContainer.c  KMFContainer.h  Visitor.c  Visitor.h  VisitorJSON.c  VisitorJSON.h  hashmap.c  jsondeserializer.c  jsondeserializer.h  jsondeserializer.temp  jsonparse.h  jsontree.c  kevoree.h  main.c  main_manual.c  main_reference.c  main_state.c  tools.c  tools.h
org.kevoree.modeling.c.generator/src/main/resources/hardcoded/CMakeModules/: FindCheck.cmake
org.kevoree.modeling.c.generator/src/main/resources/metamodel/: kevoree.ecore
org.kevoree.modeling.c.generator/src/main/resources/templates/: LICENSE.vm  add_method.vm  add_unary_containment.vm  cmake.vm  delete_ref.vm  findById_method.vm  internalGetKey_DeployUnit.vm  internalGetKey_TypeDefinition.vm  kmfcontainer_fptr.vm  new_method.vm  remove_method.vm  testRunner.vm  testSource.vm
org.kevoree.modeling.c.generator/src/main/resources/templates/code/: VisitorJSON.vm
org.kevoree.modeling.c.generator/src/main/resources/templates/comments/: header.vm
org.kevoree.modeling.cpp.microframework/: pom.xml
(+49 files in other folders)
